FLY wire David/force-app/main/default/objects/Account_Region__c/Account_Region__c.object-meta.xml
<CustomObject>
    <description>Created from JIRA ticket: BOPI-137. Used to help with Product search filters</description>
    <label>Account Region</label>
    <nameField>
        <displayFormat>AR{000}</displayFormat>
        <label>Account Region</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>