FLY wire David/force-app/main/default/objects/Account_Region__c/fields/Account_Region_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Region_Country__c</fullName>
    <description>Created from JIRA ticket: BOPI-137</description>
    <inlineHelpText>Used within Product Search filters</inlineHelpText>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>