FLY wire David/force-app/main/default/objects/Account_Region__c/fields/Account_Region_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Account_Region_Vertical__c</fullName>
    <description>Created from JIRA Ticket: BOPI-137</description>
    <inlineHelpText>Used for Product Search Filters</inlineHelpText>
    <label>Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>