FLY wire David/force-app/main/default/objects/Account_Region__c/fields/AR_Regional_Availability__c.field-meta.xml
<CustomField>
    <fullName>AR_Regional_Availability__c</fullName>
    <description>Created for JIRA ticket: BOPI-137</description>
    <inlineHelpText>Used for Product Search Filters</inlineHelpText>
    <label>Regional Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Regional_Availability</valueSetName>
    </valueSet>
</CustomField>