FLY wire David/force-app/main/default/objects/Account_Region__c/fields/Country_3_Letter_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Country_3_Letter_Abbreviation__c</fullName>
    <description>This is used to map the Passfort country</description>
    <label>Country 3 Letter Abbreviation</label>
    <length>3</length>
    <type>Text</type>
</CustomField>