FLY wire David/force-app/main/default/objects/Account_Region__c/fields/Local_Currency__c.field-meta.xml
<CustomField>
    <fullName>Local_Currency__c</fullName>
    <description>Stores the local currency code for the region</description>
    <inlineHelpText>Created as part of SALDEV-953, stores a currency code to be retrieved by Price Rule &quot;Stamp Account Region values on quote line&quot;</inlineHelpText>
    <label>Local Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transaction_Currencies</valueSetName>
    </valueSet>
</CustomField>