FLY wire David/force-app/main/default/objects/Account_Region__c/fields/Pricing_Region__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Region__c</fullName>
    <description>Created for JIRA ticket: BOPI-137</description>
    <inlineHelpText>Used in Product Search Filters</inlineHelpText>
    <label>Pricing Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pricing_Region</valueSetName>
    </valueSet>
</CustomField>