FLY wire David/force-app/main/default/objects/Account_Region__c/listViews/All_Account_Region.listView-meta.xml
<ListView>
    <fullName>All_Account_Region</fullName>
    <columns>NAME</columns>
    <columns>Account_Region_Country__c</columns>
    <columns>Flywire_Entity__c</columns>
    <columns>Pricing_Region__c</columns>
    <columns>AR_Regional_Availability__c</columns>
    <columns>Account_Region_Vertical__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Account Region</label>
</ListView>